; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_flv-mux.c_flv_video.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_flv-mux.c_flv_video.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.serializer = type { i32 }
%struct.encoder_packet = type { i64, i32, i64, i64, i64 }

@RTMP_PACKET_TYPE_VIDEO = common dso_local global i32 0, align 4
@LOG_DEBUG = common dso_local global i32 0, align 4
@last_time = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.serializer*, i32, %struct.encoder_packet*, i32)* @flv_video to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flv_video(%struct.serializer* %0, i32 %1, %struct.encoder_packet* %2, i32 %3) #0 {
  %5 = alloca %struct.serializer*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.encoder_packet*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.serializer* %0, %struct.serializer** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.encoder_packet* %2, %struct.encoder_packet** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load %struct.encoder_packet*, %struct.encoder_packet** %7, align 8
  %12 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %11, i32 0, i32 4
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.encoder_packet*, %struct.encoder_packet** %7, align 8
  %15 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %14, i32 0, i32 3
  %16 = load i64, i64* %15, align 8
  %17 = sub nsw i64 %13, %16
  store i64 %17, i64* %9, align 8
  %18 = load %struct.encoder_packet*, %struct.encoder_packet** %7, align 8
  %19 = load %struct.encoder_packet*, %struct.encoder_packet** %7, align 8
  %20 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %19, i32 0, i32 3
  %21 = load i64, i64* %20, align 8
  %22 = call i32 @get_ms_time(%struct.encoder_packet* %18, i64 %21)
  %23 = load i32, i32* %6, align 4
  %24 = sub nsw i32 %22, %23
  store i32 %24, i32* %10, align 4
  %25 = load %struct.encoder_packet*, %struct.encoder_packet** %7, align 8
  %26 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 8
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %4
  %30 = load %struct.encoder_packet*, %struct.encoder_packet** %7, align 8
  %31 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %35, label %34

34:                                               ; preds = %29, %4
  br label %89

35:                                               ; preds = %29
  %36 = load %struct.serializer*, %struct.serializer** %5, align 8
  %37 = load i32, i32* @RTMP_PACKET_TYPE_VIDEO, align 4
  %38 = call i32 @s_w8(%struct.serializer* %36, i32 %37)
  %39 = load %struct.serializer*, %struct.serializer** %5, align 8
  %40 = load %struct.encoder_packet*, %struct.encoder_packet** %7, align 8
  %41 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %40, i32 0, i32 0
  %42 = load i64, i64* %41, align 8
  %43 = trunc i64 %42 to i32
  %44 = add nsw i32 %43, 5
  %45 = call i32 @s_wb24(%struct.serializer* %39, i32 %44)
  %46 = load %struct.serializer*, %struct.serializer** %5, align 8
  %47 = load i32, i32* %10, align 4
  %48 = call i32 @s_wb24(%struct.serializer* %46, i32 %47)
  %49 = load %struct.serializer*, %struct.serializer** %5, align 8
  %50 = load i32, i32* %10, align 4
  %51 = ashr i32 %50, 24
  %52 = and i32 %51, 127
  %53 = call i32 @s_w8(%struct.serializer* %49, i32 %52)
  %54 = load %struct.serializer*, %struct.serializer** %5, align 8
  %55 = call i32 @s_wb24(%struct.serializer* %54, i32 0)
  %56 = load %struct.serializer*, %struct.serializer** %5, align 8
  %57 = load %struct.encoder_packet*, %struct.encoder_packet** %7, align 8
  %58 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %57, i32 0, i32 2
  %59 = load i64, i64* %58, align 8
  %60 = icmp ne i64 %59, 0
  %61 = zext i1 %60 to i64
  %62 = select i1 %60, i32 23, i32 39
  %63 = call i32 @s_w8(%struct.serializer* %56, i32 %62)
  %64 = load %struct.serializer*, %struct.serializer** %5, align 8
  %65 = load i32, i32* %8, align 4
  %66 = icmp ne i32 %65, 0
  %67 = zext i1 %66 to i64
  %68 = select i1 %66, i32 0, i32 1
  %69 = call i32 @s_w8(%struct.serializer* %64, i32 %68)
  %70 = load %struct.serializer*, %struct.serializer** %5, align 8
  %71 = load %struct.encoder_packet*, %struct.encoder_packet** %7, align 8
  %72 = load i64, i64* %9, align 8
  %73 = call i32 @get_ms_time(%struct.encoder_packet* %71, i64 %72)
  %74 = call i32 @s_wb24(%struct.serializer* %70, i32 %73)
  %75 = load %struct.serializer*, %struct.serializer** %5, align 8
  %76 = load %struct.encoder_packet*, %struct.encoder_packet** %7, align 8
  %77 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %76, i32 0, i32 1
  %78 = load i32, i32* %77, align 8
  %79 = load %struct.encoder_packet*, %struct.encoder_packet** %7, align 8
  %80 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %79, i32 0, i32 0
  %81 = load i64, i64* %80, align 8
  %82 = call i32 @s_write(%struct.serializer* %75, i32 %78, i64 %81)
  %83 = load %struct.serializer*, %struct.serializer** %5, align 8
  %84 = load %struct.serializer*, %struct.serializer** %5, align 8
  %85 = call i64 @serializer_get_pos(%struct.serializer* %84)
  %86 = trunc i64 %85 to i32
  %87 = sub nsw i32 %86, 1
  %88 = call i32 @s_wb32(%struct.serializer* %83, i32 %87)
  br label %89

89:                                               ; preds = %35, %34
  ret void
}

declare dso_local i32 @get_ms_time(%struct.encoder_packet*, i64) #1

declare dso_local i32 @s_w8(%struct.serializer*, i32) #1

declare dso_local i32 @s_wb24(%struct.serializer*, i32) #1

declare dso_local i32 @s_write(%struct.serializer*, i32, i64) #1

declare dso_local i32 @s_wb32(%struct.serializer*, i32) #1

declare dso_local i64 @serializer_get_pos(%struct.serializer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
